--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .App-logo {
@@ -35,4 +36,39 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+a { text-decoration: none; }
+a:hover, a:active { text-decoration: underline; }
+
+h2, h3, h4, p, table, #plot_month {
+  max-width: 1000px;
+  margin: auto;
+}
+
+h1, h2, h3, h4 {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-family: "Trebuchet MS", sans-serif;
+  letter-spacing: -2px;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+}
+
+h1 {
+  border-bottom: 2px solid black;
+  font-size: 2.5em;
+}
+
+h2 {
+  font-size: 2em;
+  border-bottom: 2px solid black;
+}
+
+p {
+  text-align: justify;
+  margin-bottom: 1em;
+  line-height: 1.5rem;
 }
