--- a/src/components/DateRangePicker.css
+++ b/src/components/DateRangePicker.css
@@ -1,3 +1,22 @@
+#picker {
+    position: fixed;
+    z-index: 1000;
+}
+
+#header {
+    position: fixed;
+    width: 100%;
+    background-color: aliceblue;
+    top: 0;
+    padding: 10px;
+    z-index: 999;
+}
+
+#header > div {
+    display: inline-block;
+    padding: 3px 8px;
+}
+
 @media  (max-width: 600px) {
 
     #picker .rdrDefinedRangesWrapper {
