--- a/src/App.scss
+++ b/src/App.scss
@@ -52,6 +52,6 @@ p {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: $mono-font;
   color: $code-color;
 }
