--- a/src/_global.scss
+++ b/src/_global.scss
@@ -5,6 +5,8 @@ $extra-small-screen: 400px;
 $background: white;
 $textDark: black;
 
+$mono-font: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+
 $code-color: #e91e63;
 $link-color: #1f77b4;
 $link-color-hover: #1d5a86;
