--- a/src/App.scss
+++ b/src/App.scss
@@ -52,6 +52,55 @@ p {
 }
 
 code {
-  font-family: $mono-font;
+  font-family: $mono-font-family;
   color: $code-color;
+}
+
+@mixin focused-btn {
+  color: $background;
+  background: $textDark;
+}
+
+.btn {
+  @include titleFont;
+  cursor: pointer;
+  padding: 3px 8px;
+  background: $background;
+  border: $border;
+  font-size: 1em; /* button have a different one */
+
+  &.focus {
+    @include focused-btn;
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      @include focused-btn;
+    }
+  }
+
+  &:active {
+    box-shadow: 0 2px 3px 0 rgb(35 57 66 / 61%);
+  }
+}
+
+// --- plot by day
+
+.plot-btn {
+  font-family: $title-font-family;
+  text-transform: uppercase;
+  position: relative;
+  bottom: -22px;
+  z-index: 100;
+  font-size: 0.7em;
+  color: #777;
+  cursor: pointer;
+  margin-left: 10pt;
+
+  @media (hover: hover) {
+    &:active,
+    &:hover {
+      color: black;
+    }
+  }
 }
