feat: add sort by read date on table for mobile
Also get rid of the css module for BookTable, which was overkill.

--- a/src/_global.scss
+++ b/src/_global.scss
@@ -15,10 +15,10 @@ $link-color-visited: #8d3399;
 
 $button-pad: 3px 8px;
 
-:export {
+//:export {
   /* available to js */
   //smallScreen: $small-screen;
-}
+//}
 
 /*  -- mixins -- */
 
