--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,15 +2,6 @@
 
 $height: 50px;
 
-@mixin fixed-centered {
-  position: fixed;
-  top: 10pt;
-  width: calc(100vw - 20pt);
-  left: 10pt;
-  right: 10pt;
-  z-index: 999;
-}
-
 #top-row {
   @include titleFont;
 
@@ -73,7 +64,12 @@ $height: 50px;
     height: $height; /* add margin */
 
     #header {
-      @include fixed-centered;
+      position: fixed;
+      top: 10pt;
+      width: calc(100vw - 20pt);
+      left: 10pt;
+      right: 10pt;
+      z-index: 999;
     }
   }
 }
@@ -86,8 +82,11 @@ $height: 50px;
       justify-content: center;
 
       .date {
+        position: fixed;
+        display: inline-block;
         text-align: center;
-        @include fixed-centered;
+        top: 10pt;
+        z-index: 999;
       }
 
       .picker {
