--- a/src/_global.scss
+++ b/src/_global.scss
@@ -15,10 +15,13 @@ $link-color-visited: #8d3399;
 
 $button-pad: 3px 8px;
 
-//:export {
+:export {
   /* available to js */
+  titleFont: $title-font-family;
+  textColor: $textDark;
+  bgColor: $background;
   //smallScreen: $small-screen;
-//}
+}
 
 /*  -- mixins -- */
 
