--- a/src/App.scss
+++ b/src/App.scss
@@ -56,6 +56,10 @@ code {
   color: $code-color;
 }
 
+.js-plotly-plot {
+  margin: auto;
+}
+
 @mixin focused-btn {
   color: $background;
   background: $textDark;
