--- a/src/components/BookTable.scss
+++ b/src/components/BookTable.scss
@@ -92,4 +92,11 @@ $sort-icon-color-active: #282bf1;
       display: block;
     }
   }
+
+  @include extra-small-screen {
+    th:nth-of-type(4),
+    td:nth-of-type(4) {
+      display: none;
+    }
+  }
 }
