--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,6 +2,15 @@
 
 $height: 50px;
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 990;
+}
+
 #top-row {
   @include titleFont;
 
