feat: show unfinished books/tasks as greyed out
Ensure it is easy to see which data come from a task that was not
completely done in a given time range.
This applies to PlotByDay and the table.

--- a/src/components/BookTable.scss
+++ b/src/components/BookTable.scss
@@ -38,6 +38,10 @@ $sort-icon-color-active: #282bf1;
     background: $hover-color;
   }
 
+  tr.partial {
+    opacity: 0.5;
+  }
+
   /* -- sort arrows */
 
   .sortHandle:after {
