--- a/src/components/BookTable.scss
+++ b/src/components/BookTable.scss
@@ -13,7 +13,6 @@ $sort-icon-color-active: #282bf1;
 /* -- basic styles */
 
 .bookTable {
-
   table {
     margin: 10px auto;
     padding: 5px 10px;
@@ -87,8 +86,13 @@ $sort-icon-color-active: #282bf1;
       overflow-x: initial;
     }
 
-    th:nth-of-type(3),
-    td:nth-of-type(3) {
+    th:nth-of-type(4),
+    td:nth-of-type(4) {
+      display: none;
+    }
+
+    th:nth-of-type(5),
+    td:nth-of-type(5) {
       display: none;
     }
 
@@ -98,8 +102,8 @@ $sort-icon-color-active: #282bf1;
   }
 
   @include extra-small-screen {
-    th:nth-of-type(4),
-    td:nth-of-type(4) {
+    th:nth-of-type(3),
+    td:nth-of-type(3) {
       display: none;
     }
   }
