--- a/src/components/BookTable.scss
+++ b/src/components/BookTable.scss
@@ -41,6 +41,24 @@ $sort-icon-color-active: #282bf1;
     opacity: 0.5;
   }
 
+  tr.audio {
+    td:nth-child(5),
+    td:nth-child(6) {
+      background: #ffc1071a;
+
+      &::before {
+        content: ''; // Must be an empty string to show the background
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        vertical-align: middle;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20stroke%3D%22%23762d16%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%3E%3Cpath%20stroke%3D%22%23b24d2d%22%20d%3D%22M11%205%206%209H2v6h4l5%204z%22%2F%3E%3Cpath%20d%3D%22M19.07%204.93a10%2010%200%200%201%200%2014.14M15.54%208.46a5%205%200%200%201%200%207.07%22%2F%3E%3C%2Fsvg%3E');
+      }
+    }
+  }
+
   /* -- sort arrows */
 
   .sortHandle:after {
